# BT-DSL-POC

./: .clang-tidy  .eslintrc.json  .gitignore  .markdownlint-cli2.jsonc  .npmrc  .prettierignore  .vscode-test.mjs  README.md  esbuild.mjs  eslint.config.mjs  langium-config.json  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.json  tsconfig.vscode-test.json  vitest.config.ts
core/: .gitignore  CMakeLists.txt  package.json
core/cli/: main.cpp
core/include/bt_dsl/: analyzer.hpp  ast.hpp  btcpp_model.hpp  diagnostic.hpp  manifest_converter.hpp  node_registry.hpp  parser.hpp  symbol_table.hpp  type_system.hpp  xml_generator.hpp
core/include/bt_dsl/ast/: ast.hpp  ast_context.hpp  ast_dumper.hpp  ast_enums.hpp  ast_nodes.def  json_visitor.hpp  visitor.hpp
core/include/bt_dsl/basic/: casting.hpp  diagnostic.hpp  diagnostic_printer.hpp  source_manager.hpp
core/include/bt_dsl/codegen/: btcpp_model.hpp  model_converter.hpp  xml_generator.hpp
core/include/bt_dsl/core/: ast.hpp  diagnostic.hpp  fwd.hpp  symbol_table.hpp
core/include/bt_dsl/driver/: compiler.hpp  stdlib_finder.hpp
core/include/bt_dsl/lsp/: completion_context.hpp  lsp.hpp
core/include/bt_dsl/parser/: parser.hpp
core/include/bt_dsl/project/: project_config.hpp
core/include/bt_dsl/sema/analysis/: cfg.hpp  cfg_builder.hpp  init_checker.hpp  null_checker.hpp  tree_recursion_checker.hpp
core/include/bt_dsl/sema/resolution/: module_graph.hpp  module_resolver.hpp  name_resolver.hpp  node_registry.hpp  symbol_table.hpp  symbol_table_builder.hpp
core/include/bt_dsl/sema/types/: const_evaluator.hpp  const_value.hpp  type.hpp  type_checker.hpp  type_table.hpp  type_utils.hpp
core/include/bt_dsl/semantic/: analyzer.hpp  behavior.hpp  const_eval.hpp  init_safety.hpp  node_registry.hpp  type_system.hpp
core/include/bt_dsl/syntax/: ast_builder.hpp  completion_query.hpp.in  frontend.hpp  keywords.hpp  lexer.hpp  parser.hpp  token.hpp  ts_ll.hpp
core/include/bt_dsl/test_support/: parse_helpers.hpp
core/lib/ast/: json_visitor.cpp
core/lib/basic/: diagnostic.cpp  diagnostic_printer.cpp  source_manager.cpp
core/lib/codegen/: model_converter.cpp  xml_generator.cpp
core/lib/driver/: compiler.cpp  stdlib_finder.cpp
core/lib/lsp/: completion_context.cpp  workspace.cpp
core/lib/project/: project_config.cpp
core/lib/sema/analysis/: cfg_builder.cpp  init_checker.cpp  null_checker.cpp  tree_recursion_checker.cpp
core/lib/sema/resolution/: module_resolver.cpp  name_resolver.cpp  symbol_table.cpp  symbol_table_builder.cpp
core/lib/sema/types/: const_evaluator.cpp  type.cpp  type_checker.cpp  type_utils.cpp
core/lib/syntax/: AstBuilder.cpp  BuildExpr.cpp  BuildStmt.cpp  BuildSupport.cpp  BuildType.cpp  frontend.cpp  lexer.cpp  parser.cpp  ts_ll.cpp
core/scripts/: build-wasm.mjs  build-wasm.sh  ensure-cmake-build-dir.mjs
core/src/: analyzer.cpp  diagnostic.cpp  manifest_converter.cpp  node_registry.cpp  parser.cpp  symbol_table.cpp  type_system.cpp  xml_generator.cpp
core/src/cli/: main.cpp  manifest_converter.cpp
core/src/codegen/: xml_generator.cpp
core/src/core/: diagnostic.cpp  symbol_table.cpp
core/src/lsp/: completion_context.cpp  workspace.cpp
core/src/lsp_server/: main.cpp
core/src/parser/: parser.cpp
core/src/semantic/: analyzer.cpp  behavior.cpp  const_eval.cpp  init_safety.cpp  node_registry.cpp  type_system.cpp
core/std/: nodes.bt
core/stdlib/: StandardNodes.bt
core/tests/: CMakeLists.txt  test_lsp_completion.cpp  test_lsp_diagnostics.cpp  test_lsp_document_highlight.cpp  test_lsp_hover_definition.cpp  test_lsp_semantic_tokens.cpp  test_lsp_symbols.cpp  test_manifest_converter.cpp  test_parser.cpp  test_semantic.cpp  test_xml_generator.cpp
core/tests/cli/: test_cli_imports.cpp  test_manifest_converter.cpp
core/tests/codegen/: test_xml_generator.cpp
core/tests/integration/: test_golden_outputs.cpp
core/tests/integration/golden/expected/: import_mangling_main.ast.txt  import_mangling_main.xml  mission_control.ast.txt  mission_control.xml  navigation_pipeline.ast.txt  navigation_pipeline.xml
core/tests/integration/golden/inputs/: import_mangling_main.bt  mission_control.bt  navigation_pipeline.bt
core/tests/lsp/: test_lsp_completion.cpp  test_lsp_diagnostics.cpp  test_lsp_document_highlight.cpp  test_lsp_hover_definition.cpp  test_lsp_semantic_tokens.cpp  test_lsp_symbols.cpp
core/tests/lsp_server/: test_lsp_server_jsonrpc.cpp
core/tests/parser/: test_parser.cpp
core/tests/semantic/: test_semantic.cpp
core/tests/unit/: test_dump_decls_signatures.cpp  test_dump_expressions.cpp  test_dump_types_literals.cpp
core/tests/unit/ast/: test_children_blocks.cpp  test_complex_examples.cpp  test_docs_crlf.cpp  test_expressions.cpp  test_json_visitor.cpp  test_literals.cpp  test_parser_ported_basic.cpp  test_parser_recovery.cpp  test_preconditions.cpp  test_program_top_level.cpp  test_statements.cpp
core/tests/unit/codegen/: test_xml_generator.cpp
core/tests/unit/dump/: test_dump_decls_signatures.cpp  test_dump_expressions.cpp  test_dump_types_literals.cpp
core/tests/unit/lsp/: test_completion_context.cpp  test_workspace_basic.cpp
core/tests/unit/reference/: test_ref_declarations_scopes.cpp  test_ref_expression_typing.cpp  test_ref_frontend_recovery.cpp  test_ref_imports.cpp  test_ref_init_safety.cpp  test_ref_lexical_structure.cpp  test_ref_null_behavior.cpp  test_ref_static_analysis.cpp  test_ref_syntax.cpp  test_ref_type_compatibility.cpp  test_ref_type_definitions.cpp  test_ref_type_inference.cpp  test_ref_xml_mapping.cpp
core/tests/unit/sema/: test_cfg.cpp  test_const_evaluator.cpp  test_error_messages.cpp  test_init_checker.cpp  test_module_resolution.cpp  test_name_resolution.cpp  test_null_checker.cpp  test_null_checker_v2.cpp  test_tree_recursion.cpp  test_type_checker.cpp
core/tests/unit/syntax/: test_lexer.cpp
core/tools/bt_dsl_lsp_server/: main.cpp
core/tools/btc/: main.cpp
core/tools/formatter_wasm/: main.cpp
core/wasm/: exports.cpp
docs/: .gitignore  (+8 more)
(+146 files in other folders)
