cmake_minimum_required(VERSION 3.20)
project(bt-dsl-core VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Options
option(BUILD_TESTS "Build tests" ON)
option(WERROR "Treat warnings as errors" OFF)
option(ENABLE_SANITIZERS "Enable AddressSanitizer and UndefinedBehaviorSanitizer" OFF)

# =============================================================================
# Sanitizers (must be set before any targets)
# =============================================================================
if(ENABLE_SANITIZERS)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
        add_link_options(-fsanitize=address,undefined)
    else()
        message(WARNING "Sanitizers are only supported with GCC/Clang")
    endif()
endif()

# =============================================================================
# Dependencies via FetchContent
# =============================================================================
include(FetchContent)

# Tree-sitter core library
FetchContent_Declare(
    tree-sitter
    GIT_REPOSITORY https://github.com/tree-sitter/tree-sitter.git
    GIT_TAG v0.24.6
    SOURCE_SUBDIR lib
)
FetchContent_MakeAvailable(tree-sitter)

# TinyXML2 (for BT.CPP XML emission)
FetchContent_Declare(
    tinyxml2
    GIT_REPOSITORY https://github.com/leethomason/tinyxml2.git
    GIT_TAG 10.0.0
)
FetchContent_MakeAvailable(tinyxml2)

# nlohmann/json (used for serverless LSP JSON APIs)
FetchContent_Declare(
    nlohmann_json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG v3.11.3
)
FetchContent_MakeAvailable(nlohmann_json)

# Get tree-sitter source directory for includes
FetchContent_GetProperties(tree-sitter)
set(TREE_SITTER_INCLUDE_DIR "${tree-sitter_SOURCE_DIR}/lib/include")

message(STATUS "Tree-sitter include dir: ${TREE_SITTER_INCLUDE_DIR}")

# =============================================================================
# Tree-sitter BT-DSL parser (from local directory)
# =============================================================================
set(TS_BT_DSL_DIR "${CMAKE_SOURCE_DIR}/../tree-sitter-bt-dsl")

# Validate that parser.c exists (generated by tree-sitter generate)
if(NOT EXISTS "${TS_BT_DSL_DIR}/src/parser.c")
    message(FATAL_ERROR
        "Tree-sitter parser not found at ${TS_BT_DSL_DIR}/src/parser.c\n"
        "Please run: pnpm build:grammar"
    )
endif()

add_library(tree_sitter_bt_dsl STATIC
    "${TS_BT_DSL_DIR}/src/parser.c"
)
target_include_directories(tree_sitter_bt_dsl PUBLIC
    "${TS_BT_DSL_DIR}/src"
    "${TREE_SITTER_INCLUDE_DIR}"
)
target_link_libraries(tree_sitter_bt_dsl PUBLIC tree-sitter)

# =============================================================================
# Core library
# =============================================================================
set(BT_DSL_CORE_SOURCES
    src/parser/parser.cpp
    src/core/diagnostic.cpp
    src/core/symbol_table.cpp
    src/semantic/type_system.cpp
    src/semantic/node_registry.cpp
    src/semantic/analyzer.cpp
    src/codegen/xml_generator.cpp
    src/lsp/completion_context.cpp
    src/lsp/workspace.cpp
)

add_library(bt_dsl_core STATIC ${BT_DSL_CORE_SOURCES})
target_include_directories(bt_dsl_core PUBLIC
    include
    "${TREE_SITTER_INCLUDE_DIR}"
)
target_link_libraries(bt_dsl_core PUBLIC tree_sitter_bt_dsl)
target_link_libraries(bt_dsl_core PUBLIC tinyxml2)
target_link_libraries(bt_dsl_core PUBLIC nlohmann_json::nlohmann_json)

# Common compiler warnings
set(BT_DSL_COMPILE_OPTIONS
    $<$<CXX_COMPILER_ID:GNU,Clang>:
    -Wall -Wextra -Wpedantic
    -Wshadow -Wnon-virtual-dtor -Wold-style-cast
    -Wcast-align -Wunused -Woverloaded-virtual
    -Wconversion -Wsign-conversion
    $<$<BOOL:${WERROR}>:-Werror>
    >
    $<$<CXX_COMPILER_ID:MSVC>:/W4 $<$<BOOL:${WERROR}>:/WX>>
)

target_compile_options(bt_dsl_core PRIVATE ${BT_DSL_COMPILE_OPTIONS})

# =============================================================================
# CLI executable
# =============================================================================
option(BUILD_CLI "Build CLI tool" ON)

# Native stdio Language Server (JSON-RPC / LSP)
option(BUILD_LSP_SERVER "Build JSON-RPC LSP server executable" ON)

if(BUILD_CLI)
    add_executable(bt_dsl_cli
        src/cli/main.cpp
        src/cli/manifest_converter.cpp
    )
    target_include_directories(bt_dsl_cli PRIVATE src/cli)
    target_link_libraries(bt_dsl_cli PRIVATE bt_dsl_core)
    target_compile_options(bt_dsl_cli PRIVATE ${BT_DSL_COMPILE_OPTIONS})
endif()

# =============================================================================
# Native LSP server executable (JSON-RPC over stdio)
# =============================================================================

if(BUILD_LSP_SERVER)
    add_executable(bt_dsl_lsp_server
        src/lsp_server/main.cpp
    )
    target_link_libraries(bt_dsl_lsp_server PRIVATE bt_dsl_core)
    target_compile_options(bt_dsl_lsp_server PRIVATE ${BT_DSL_COMPILE_OPTIONS})
endif()

# =============================================================================
# Tests
# =============================================================================
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()
